fix: login page - script tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="style.css">
-    <script src="/login.js" defer></script>
+    <script src="./login.js" defer></script>
 </head>
 
 <body>
@@ -31,7 +31,6 @@
             
         </form>
     </div>
-    <script src="./login.js"></script>
 </body>
 
 </html>
