--- a/registration.html
+++ b/registration.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h2>Registrati</h2>
-        <form action="/index.html" class="registrationForm">
+        <form class="registrationForm">
             <div class="input-group">
                 <label for="email" class="label">Email</label>
                 <input type="email" id="emailRegistration" class="input">
@@ -35,7 +35,7 @@
                 <span class="error-message"></span>
             </div>
             <br>
-            <button class="button" type="submit" id="submitRegistration">Registrati ora</button>
+            <button class="button" type="submit" id="submitRegistration" onclick="register()">Registrati ora</button> 
         </form>
     </div>
     <script src="./registration.js"></script>
