parte di Federica scritta 2.0

--- a/registration.html
+++ b/registration.html
@@ -35,7 +35,7 @@
                 <span class="error-message"></span>
             </div>
             <br>
-            <button class="button" type="submit" id="submitRegistration" onclick="register()">Registrati ora</button> 
+            <button class="button" type="submit" id="submitRegistration">Registrati ora</button> 
         </form>
     </div>
     <script src="./registration.js"></script>
