--- a/pages/signup.html
+++ b/pages/signup.html
@@ -48,7 +48,7 @@
           <!-- Input field component -->
           <div class="inputField">
             <div class="fieldContainer">
-              <input type="password" id="passwordRegistration" required placeholder=" ">
+              <input type="password" id="passwordRegistration" required placeholder=" " pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
               <label for="passwordRegistration">Password</label>
             </div>
             <a href="" class="fieldMessage" data-message="password">Forgot password?</a>
