fix redirect profile to login

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -14,7 +14,7 @@
     <div class="container">
         <h2>Profilo</h2>
         <div id="divParent"></div>
-        <button><a href="./index.html" id="logout">Logout</a></button>
+        <button><a id="logout">Logout</a></button>
     </div>
     <script src="../profile.js" defer></script>
 </body>
