Added profile circle immage

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -9,22 +9,23 @@
 <body class="profileScreen">
 
   <main>
-    <section style="background-image: url(../images/profilePicture.png)">
+    <section style="background-image: url(../images/coverPhoto1.jpg)">
       <!-- Leave empty -->
     </section>
     <section>
       <div class="sectionContent">
+        <div class="profilePicture" style="background-image: url(../images/profilePicture.png)"></div>
         <div class="sectionProfile" id="divParent"></div>
-        <button class="buttonPrimary" data-size="large" id=""><span>Lou out</span></button>
+        <button class="buttonPrimary" data-size="large" id="logout"><span>Lou out</span></button>
       </div>
     </section>
   </main>
 
-    <div class="container">
+    <!-- <div class="container">
         <h2>Profilo</h2>
         <div id="divParent"></div>
         <button><a id="logout">Logout</a></button>
-    </div>
+    </div> -->
     <script src="../profile.js" defer></script>
 </body>
 </html>
