--- a/pages/signup.html
+++ b/pages/signup.html
@@ -14,7 +14,7 @@
         <img class="logo" src="../images/logo.png" alt="Image of the logo">
         <div class="textContainer">
           <h1>Create account</h1>
-          <p>Do you have an account?<br><a href="login.html">Login</a></p>
+          <p>Do you have an account?<br><a href="../index.html">Login</a></p>
         </div>
         <h6><a href="">www.companywebsite.com</a></h6>
       </div>
@@ -55,7 +55,7 @@
             <a href="" class="fieldMessage" data-message="password">Forgot password?</a>
           </div>
           <button class="buttonPrimary" data-size="large" type="submit" id="submitRegistration"><span>Sign up</span></button>
-          <p class="formLinkToSignUp">Do you have an account? <a href="login.html">Login</a></p>
+          <p class="formLinkToSignUp">Do you have an account? <a href="../index.html">Login</a></p>
         </form>
       </div>
     </section>
