Added cover photo to profile page

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -9,7 +9,7 @@
 <body class="profileScreen">
 
   <main>
-    <section style="background-image: url(../images/coverPhoto1.jpg)">
+    <section style="background-image: url(../images/coverPhoto2.png)">
       <!-- Leave empty -->
     </section>
     <section>
