--- a/pages/signup.html
+++ b/pages/signup.html
@@ -50,8 +50,8 @@
             <div class="fieldContainer">
               <input type="password" id="passwordRegistration" required placeholder=" " pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" onchange="validatePassword()">
               <label for="passwordRegistration">Password</label>
-              <span id="messagePasswordSignup" style="color:red"></span>
             </div>
+            <span id="messagePasswordSignup" class="fieldMessage"></span>
             <a href="" class="fieldMessage" data-message="password">Forgot password?</a>
           </div>
           <button class="buttonPrimary" data-size="large" type="submit" id="submitRegistration"><span>Sign up</span></button>
