Modified profile pic

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -14,7 +14,7 @@
     </section>
     <section>
       <div class="sectionContent">
-        <div class="profilePicture" style="background-image: url(../images/profilePicture.png)"></div>
+        <div class="profilePicture" style="background-image: url(../images/profilePicture.jpg)"></div>
         <div class="sectionProfile" id="divParent"></div>
         <button class="buttonPrimary" data-size="large" id="logout"><span>Lou out</span></button>
       </div>
