fix outline color

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -28,7 +28,7 @@
           <div class="inputField">
             <div class="fieldContainer">
               <input type="text" id="nameRegistration" required placeholder=" " onkeyup="validateName()">
-              <label for="nameRegistration">Name</label>
+              <label for="nameRegistration" id="emailRegistrationName">Name</label>
             </div>
             <span id="messageNameSignup" class="fieldMessage"></span>
           </div>
@@ -44,7 +44,7 @@
           <div class="inputField">
             <div class="fieldContainer">
               <input type="email" id="emailRegistration" required placeholder=" " onkeyup="validateEmail()">
-              <label for="emailRegistration">Email</label>
+              <label for="emailRegistration" id="emailRegistrationLabel">Email</label>
             </div>
             <span id="messageEmailSignup" class="fieldMessage"></span>
           </div>
