add validate all input form login

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               <input type="email" id="emailLogin" required placeholder=" ">
               <label for="emailLogin">Email</label>
             </div>
+            <span id="messageEmailLogin" class="fieldMessage"></span>
           </div>
           <!-- Input field component -->
           <div class="inputField">
