fix images login

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body class="loginScreen">
 
   <main>
-    <section style="background-image: url(../images/abstract-background.jpg)">
+    <section style="background-image: url(./images/abstract-background.jpg)">
       <div class="sectionContent">
-        <img class="logo" src="../images/logo.png" alt="Image of the logo">
+        <img class="logo" src="./images/logo.png" alt="Image of the logo">
         <div class="textContainer">
           <h1>Welcome back!</h1>
           <p>Don't have an account?<br><a href="pages/signup.html">Sign up</a></p>
