--- a/pages/signup.html
+++ b/pages/signup.html
@@ -28,7 +28,7 @@
           <div class="inputField">
             <div class="fieldContainer">
               <input type="text" id="nameRegistration" required placeholder=" " onkeyup="validateName()">
-              <label for="nameRegistration" id="emailRegistrationName">Name</label>
+              <label for="nameRegistration" id="nameRegistrationLabel">Name</label>
             </div>
             <span id="messageNameSignup" class="fieldMessage"></span>
           </div>
@@ -36,7 +36,7 @@
           <div class="inputField">
             <div class="fieldContainer">
               <input type="number" id="ageRegistration" required placeholder=" " min="1" max="200" onkeyup="ageImposeMinMax(this)">
-              <label for="ageRegistration">Age</label>
+              <label for="ageRegistration" id="ageRegistrationLabel">Age</label>
             </div>
             <span id="messageAgeSignup" class="fieldMessage"></span>
           </div>
@@ -52,7 +52,7 @@
           <div class="inputField">
             <div class="fieldContainer">
               <input type="password" id="passwordRegistration" required placeholder=" " pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" onkeyup="validatePassword()">
-              <label for="passwordRegistration">Password</label>
+              <label for="passwordRegistration" id="passwordRegistrationLabel">Password</label>
             </div>
             <span id="messagePasswordSignup" class="fieldMessage"></span>
             <a href="" class="fieldMessage" data-message="password">Forgot password?</a>
