--- a/pages/profile.html
+++ b/pages/profile.html
@@ -16,7 +16,7 @@
       <div class="sectionContent">
         <div class="profilePicture" style="background-image: url(../images/profilePicture.jpg)"></div>
         <div class="sectionProfile" id="divParent"></div>
-        <button class="buttonPrimary" data-size="large" id="logout"><span>Lou out</span></button>
+        <button class="buttonPrimary" data-size="large" id="logout"><span>Log out</span></button>
       </div>
     </section>
   </main>
